--- a/internship_system/placement/static/placement/assets/css/nav-dropdown.css
+++ b/internship_system/placement/static/placement/assets/css/nav-dropdown.css
@@ -1,6 +1,7 @@
 .nav-interns, .nav-attendance {
     position: relative;
     background-color: #222629;
+    cursor: pointer;
 }
 
 /* Intern dropdown*/
