--- a/internship_system/placement/templates/company/applications.html
+++ b/internship_system/placement/templates/company/applications.html
@@ -1,9 +1,9 @@
 {% extends "company/base.html" %}
 {% load static %}
 
-{% block content %}
+{% block title %}Internship Application{% endblock %}
 
-<link rel="stylesheet" href="{% static 'placement/assets/css/company.css' %}">
+{% block content %}
 
 <h2 class="greeting">Internship Applications</h2>
 
