--- a/internship_system/placement/templates/company/dashboard.html
+++ b/internship_system/placement/templates/company/dashboard.html
@@ -1,16 +1,9 @@
 {% extends "company/base.html" %}
-
 {% load static %}
 
-{% block content %}
+{% block title %}Dashboard{% endblock %}
 
-<head>
-		<title>{% block title %}Dashboard{% endblock %}</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <!-- CSS -->
-        <link rel="stylesheet" href="{% static 'placement/assets/css/company.css' %}">
-</head>
+{% block content %}
 
 <body>
 
