--- a/internship_system/placement/templates/company/evaluation_form.html
+++ b/internship_system/placement/templates/company/evaluation_form.html
@@ -6,7 +6,7 @@
 
 <h2>Evaluate {{ placement.student.user.username }}</h2>
 
-<form method="post">
+<form method="post" class="evaluation-form">
 {% csrf_token %}
 
 <p>1. The intern performs assigned tasks responsibly</p>
