--- a/internship_system/placement/templates/notifications/list.html
+++ b/internship_system/placement/templates/notifications/list.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<title>Notifications</title>
+
 <link rel="stylesheet" href="{% static 'placement/assets/css/notifications.css' %}">
 
 <div class="notification-page">
