--- a/internship_system/placement/templates/company/base.html
+++ b/internship_system/placement/templates/company/base.html
@@ -4,12 +4,13 @@
 
 <html>
 	<head>
-		<title>Dashboard</title>
+		<title>{% block title %}Base{% endblock %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <!-- CSS -->
         <link rel="stylesheet" href="{% static 'placement/assets/css/main.css' %}">
 		<link rel="stylesheet" href="{% static 'placement/assets/css/nav-dropdown.css' %}">
+		<link rel="stylesheet" href="{% static 'placement/assets/css/company.css' %}">
 	</head>
 	<body class="is-preload">
 		<!-- Header -->
@@ -33,7 +34,7 @@
 									<a id="internToggle"><span class="icon solid fa-users">Interns</span></a>
 									<ul id="dropdown-menu">
 										{% for intern in interns %}
-                							<li>{{ intern.user.username }}</li>
+                							<li><a href="{% url 'company_student_profile' student_id=intern.id %}">{{ intern.user.username }}</a></li>
 										{% empty %}
 											<li class="empty">No interns assigned</li>
 										{% endfor %}
