edit profile info and add notifications

--- a/internship_system/placement/templates/company/base.html
+++ b/internship_system/placement/templates/company/base.html
@@ -61,7 +61,7 @@
 									</ul>
 								</li>
                                 <li><a href="{% url 'evaluation_list' %}" id="contact-link"><span class="icon solid fa-check">Evaluation</span></a></li>
-                                <li><a href="{% url 'notifications' %}" id="contact-link"><span class="icon solid fa-bell">Notifications</span></a></li>
+                                <li><a href="{% url 'notifications' %}" id="contact-link"><span class="icon solid fa-bell">Notifications</span>{% if unread_count %}<span class="notification-badge">{{ unread_count }}</span>{% endif %}</a></li>
 							</ul>
 						</nav>
 
