--- a/internship_system/placement/static/placement/assets/css/main.css
+++ b/internship_system/placement/static/placement/assets/css/main.css
@@ -3003,4 +3003,19 @@ form select {
   margin-left: 0;
 }
 
+/* Notification Badge */
+.notification-badge {
+  display: inline-block;
+  background-color: #e74c3c;
+  color: white;
+  border-radius: 50%;
+  width: 18px;
+  height: 18px;
+  line-height: 18px;
+  text-align: center;
+  font-size: 11px;
+  font-weight: bold;
+  margin-left: 6px;
+  vertical-align: middle;
+}
 
